@@ -156,7 +156,8 @@ struct GlobalConstants {
     static let AKMinTaskNoteLength = 1
     // Dates
     static let AKWorkingDayTimeDateFormat = "HH:mm"
-    static let AKAcceptingTasksDefaultTime = 2359
+    static let AKWorkingDayStartTime = 0 // Military type of time: 00:00Hs.
+    static let AKAcceptingTasksDefaultTime = 2359 // Military type of time: 23:59Hs.
     // Segues
     static let AKViewProjectSegue = "ViewProjectSegue"
     static let AKViewTaskSegue = "ViewTaskSegue"
